# Todo_List

./: Cargo.toml  Dioxus.toml  README.md
assets/: app.css
src/: main.rs
src/components/: add_form.rs  cat_button.rs  mod.rs  sidebar.rs  stats.rs  todo_list.rs
src/icons/: mod.rs
src/models/: mod.rs
src/storage/: mod.rs
