[package]
name = "dioxus-todo"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.7", features = ["desktop"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tokio = { version = "1", features = ["time"] }

[profile.release]
strip = true
lto = true
